--- a/kalkulacka-trenink.html
+++ b/kalkulacka-trenink.html
@@ -50,7 +50,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                           <label for="heightCalc"><i class="fas fa-ruler-vertical"></i> Výška (m):</label>
+                           <label for="heightCalc"><i class="fas fa-ruler-vertical"></i> Výška (metry, např. 1,75):</label>
                            <input type="number" id="heightCalc" placeholder="např. 1,75" required>
                         </div>
                          <div class="form-group">
